--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="sbB2">Convert USD to INR</string>
     <string name="Button3">City Guide</string>
     <string name="sbB3">Check on smart city guide</string>
+    <string name="IM"></string>
 
 
 
