--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
     <string name="Button3">City Guide</string>
     <string name="sbB3">Check on smart city guide</string>
     <string name="IM"></string>
+    <string name="enterUSD"> Enter USD Amount</string>
+    <string name="MainButton">Convert Currency</string>
+    <string name="showINR"> Converted Amount</string>
+    <string name="convertedINR"> INR </string>
+
 
 
 
