Added test string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,12 @@
     <string name="MainButton">Convert Currency</string>
     <string name="showINR"> Converted Amount</string>
     <string name="convertedINR"> INR </string>
-    <string name="btmusic"> Play folk music</string>
+    <string name="Button4"> Play folk music</string>
+
+
+
+
+
 
 
 </resources>
