--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="enterUSD"> Enter USD Amount</string>
     <string name="MainButton">Convert Currency</string>
     <string name="showINR"> Converted Amount</string>
+    <string name="tvGoldenTemple"> Golden Temple </string>
     <string name="convertedINR"> INR </string>
     <string name="tvresult"> Amount In INR </string>
     <string name="Button4"> Play folk music</string>
