--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="btPibarePause">Pause Pibare Song</string>
     <string name="btRagaPause">Pause Raga Song</string>
 
+    #SitesofIndia
+    <string name="tvTirupati"> Tirumala Tirupati </string>
+
 
 
 
